--- a/index.html
+++ b/index.html
@@ -314,7 +314,7 @@
 
     <script>
         // Configuración de la API
-        const API_URL = 'http://localhost:8000';
+        const API_URL = 'https://age-prediction-api-production.up.railway.app';
         
         let selectedFile = null;
 
